--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WorkZen - Modern HRMS</title>
-    <meta name="description" content="Streamline your workforce operations with WorkZen's comprehensive HR Management System" />
+    <meta
+      name="description"
+      content="Streamline your workforce operations with WorkZen's comprehensive HR Management System"
+    />
     <meta name="author" content="WorkZen" />
 
     <meta property="og:title" content="WorkZen - Modern HRMS" />
-    <meta property="og:description" content="Streamline your workforce operations with WorkZen's comprehensive HR Management System" />
+    <meta
+      property="og:description"
+      content="Streamline your workforce operations with WorkZen's comprehensive HR Management System"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
